--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "base",
+  "name": "website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,21 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest"
+  },
+  "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
-    "@types/node": "20.4.5",
-    "@types/react": "18.2.17",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
-    "eslint-config-prettier": "^8.9.0",
-    "next": "13.4.12",
-    "postcss": "8.4.27",
-    "prettier": "^3.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sass": "^1.64.1",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "@types/node": "latest",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+    "autoprefixer": "latest",
+    "eslint": "latest",
+    "eslint-config-next": "latest",
+    "eslint-plugin-prettier": "^5.0.0",
+    "postcss": "latest",
+    "prettier": "^3.0.3",
+    "sass": "^1.68.0",
+    "tailwindcss": "latest",
+    "typescript": "latest"
   }
 }
